WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311112
[GLIB] WebKit::IconDatabase::~IconDatabase(): ASSERTION FAILED: isMainRunLoop()
https://bugs.webkit.org/show_bug.cgi?id=311112
Summary
[GLIB] WebKit::IconDatabase::~IconDatabase(): ASSERTION FAILED: isMainRunLoop()
Claudio Saavedra
Reported
2026-03-30 09:13:14 PDT
.
Attachments
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2026-03-30 09:18:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61700
EWS
Comment 2
2026-03-30 10:48:55 PDT
Committed
310242@main
(e284abe8a7fa): <
https://commits.webkit.org/310242@main
> Reviewed commits have been landed. Closing PR #61700 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug